--- a/responsive.css
+++ b/responsive.css
@@ -1,5 +1,7 @@
 @media screen and (max-width: 400px){
 
+      /* nav responsive css starts here */
+
     .nav-container{
     flex-direction: column;
     width: 400px;
@@ -29,6 +31,43 @@
 
     }
 
+  /* nav responsive css ends here */
 
+  /* banner css starts here  */
+
+    .banner-section{
+        background-image: none;
+
+    }
+
+    .banner-container{
+        flex-direction: column;
+        flex-direction: column-reverse;
+        width: auto;
+        padding: 0px 20px;
+    }
+
+    .banner-left{
+        width: 100%;
+        padding: 50px 20px;
+        background-image: url(images/Group14.png);
+        background-size: contain;
+        background-repeat: no-repeat;
+    }
+    .banner-left h2{
+        font-size: 28px;
+
+    }
+    
+    .banner-left h1{
+        font-size: 45px;
+        
+    }
+    .banner-right{
+        width: 100%;
+        padding: 50px 20px;
+    }
+
+      /* banner css ends here  */
 
 }
