--- a/responsive.css
+++ b/responsive.css
@@ -1,10 +1,19 @@
 @media screen and (max-width: 400px){
 
+    /* global responsive css starts here */
+    .btn-primary{
+        padding: 10px 30px;
+        font-size: 14px;
+
+    }
+
+    /* global responsive css ends here */
+
       /* nav responsive css starts here */
 
     .nav-container{
     flex-direction: column;
-    width: 400px;
+    width: auto;
 
 
     }
@@ -48,11 +57,12 @@
     }
 
     .banner-left{
-        width: 100%;
-        padding: 50px 20px;
+        width: 90%;
+        padding: 50px 20px 100px;
         background-image: url(images/Group14.png);
-        background-size: contain;
+        background-size: 100% 100%;
         background-repeat: no-repeat;
+        margin: 0 auto;
     }
     .banner-left h2{
         font-size: 28px;
@@ -70,4 +80,20 @@
 
       /* banner css ends here  */
 
+
+      /* gamer responsive css starts  */
+
+      .gamer-container{
+       flex-direction: column;
+       width: auto;
+       padding: 50px 20px;
+    
+    }
+    .gamer-left, .gamer-right{
+        width: 100%;
+        text-align: center;
+    }
+
+
+      /* gamer responsive css ends  */
 }
