--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ nav{
     align-items: center;
     width: 1280px;
     margin: 0 auto;
-    padding: 50px 0;
+    padding: 40px 0;
 
 }
 
@@ -168,3 +168,65 @@ nav{
 .banner-right img{
     width: 100%;
 }
+
+
+/* gamer css starts here  */
+
+.gamer-section{
+    background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
+}
+
+.gamer-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 1280px;
+    margin: 0 auto;
+    padding: 50px 0;
+    gap: 25px;
+
+}
+
+.gamer-right{
+    text-align: right;
+    width: 30%;
+}
+
+.gamer-right h3{
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size: 35px;
+    margin: 0;
+}
+
+.gamer-right p {
+    font-size: 14px;
+    line-height: 1.3;
+    font-weight: 200;
+}
+
+.gamer-btn{
+    background-color: var(--main-color);
+}
+
+.gamer-right h4 {
+    font-size: 22px;
+    color: #534C64;
+}
+.gamer-right h4 span{
+    color: #534C64;
+    font-size: 16px;
+    font-weight: 500;
+
+}
+
+.gamer-left{
+    width: 70%;
+}
+.gamer-left img{
+    width: 100%;
+}
+
+/* gamer css ends here  */
