--- a/style.css
+++ b/style.css
@@ -230,3 +230,83 @@ nav{
 }
 
 /* gamer css ends here  */
+
+/* funny video section css starts here  */
+.funny-game-container{
+    width: 1280px;
+    margin: 0 auto;
+}
+.overlay-image-colum{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    gap: 15px;
+}
+
+.hover-image-style {
+position: relative;
+}
+.hover-image-style .overlay-items {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: none;
+    }
+
+.hover-image-style .overlay-items:hover {
+display: block;
+}
+
+.hover-image-style img{
+border: 2px solid transparent;
+border-radius: 20px;
+transition: .5s;
+background-color: #4EC5F7;
+positi
+
+}
+
+.hover-image-style img:hover{
+    border: 2px solid var(--main-color);
+    border-radius: 20px;
+
+    }
+
+/* funny video section css ends here  */
+
+/* New CSS for overlay and video play icon */
+/* .overlay-image-section {
+    position: relative;
+  }
+  
+  .hover-image-style::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Overlay color (adjust the opacity as needed) */
+    /* border-radius: 20px;
+    opacity: 0;
+    transition: opacity 0.5s;
+  }
+  
+  .hover-image-style:hover::before {
+    opacity: 1;
+  }
+  
+  .play-icon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white; /* Play icon color */
+    /* font-size: 48px;
+    opacity: 0;
+    transition: opacity 0.3s;
+  }
+  
+  .hover-image-style:hover .play-icon {
+    opacity: 1;
+  }  */
