--- a/style.css
+++ b/style.css
@@ -7,6 +7,16 @@ body{
     font-family: 'Work Sans', sans-serif;
 
 }
+h3{
+    font-size: 35px;
+    margin: 0;
+}
+
+.normal-paragraph{
+        font-size: 14px;
+        line-height: 1.3;
+        font-weight: 200;
+}
 
 :root{
     --main-color: #FF42A5;
@@ -197,15 +207,9 @@ nav{
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    font-size: 35px;
     margin: 0;
 }
 
-.gamer-right p {
-    font-size: 14px;
-    line-height: 1.3;
-    font-weight: 200;
-}
 
 .gamer-btn{
     background-color: var(--main-color);
@@ -270,43 +274,49 @@ positi
     border: 2px solid var(--main-color);
     border-radius: 20px;
 
+}
+
+/* play instantly section css starts here  */
+
+    .play-instantly-container{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 1280px;
+        margin: 0 auto;
+        padding: 50px 0;
+        gap: 75px;
+
     }
 
-/* funny video section css ends here  */
+    .play-inst-left{
+        width: 50%;
+        margin-right: 100px;
+        text-align: right;
+    }
 
-/* New CSS for overlay and video play icon */
-/* .overlay-image-section {
+    .play-inst-left p{
+        width: 50%;
+        float: right;
+    }
+
+    .play-inst-right{
+        width: 50%;
+        
+    }
+
+    .play-inst-right .main-play-inst-img img{
+        width: 90%;
+        float: right;
+        
+    }
+
+.secondary-image{
+    width: 300px;
     position: relative;
-  }
-  
-  .hover-image-style::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Overlay color (adjust the opacity as needed) */
-    /* border-radius: 20px;
-    opacity: 0;
-    transition: opacity 0.5s;
-  }
-  
-  .hover-image-style:hover::before {
-    opacity: 1;
-  }
-  
-  .play-icon {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white; /* Play icon color */
-    /* font-size: 48px;
-    opacity: 0;
-    transition: opacity 0.3s;
-  }
-  
-  .hover-image-style:hover .play-icon {
-    opacity: 1;
-  }  */
+    top: -150px;
+    left: -100px;
+}
+
+
+    /* play instantly section css endss here  */
