--- a/responsive.css
+++ b/responsive.css
@@ -132,3 +132,16 @@
     .secondary-image img{
         width: 150px;
    }
+
+
+   /* bottom grid section css starts here  */
+   .bottom-grid{
+flex-direction: column;
+
+}
+
+.bottom-grid a span{
+    font-size: 16px;
+
+}
+   /* bottom grid section css ends here  */
