--- a/style.css
+++ b/style.css
@@ -324,6 +324,9 @@ positi
 
     /* games container section css starts here  */
 
+    .bottom-grid-section{
+        padding-bottom: 50px;
+    }
     .bottom-grid-container{
         max-width: 1280px;
         margin: 0 auto;
@@ -372,3 +375,68 @@ positi
         font-weight: 400;
     }
     /* games container section css ends here  */
+
+    /* footer section css starts here  */
+
+    .footer-section{
+        display: flex;
+        justify-content: center;
+        background: #0B0223;
+        color: #fff;
+    }
+    .footer-container{
+        max-width: 1280px;
+        text-align: center;
+        padding:50px 0px;
+    }
+    .footer-logo{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .footer-logo img{
+        width: 80px;
+        object-fit: contain;
+        margin-right: 15px;
+    } 
+    .footer-logo p{
+        font-size: 35px!important;
+        font-weight: 700;
+        color: #ffffff!important;
+    } 
+    .footer-logo span{
+        color: var(--main-color);
+    }
+
+
+    .footer-menu, .footer-menu-last {
+        display: flex;
+        justify-content: space-between;
+        list-style: none;
+        color: #fff;
+        font-size: 16px;
+    }
+
+    .footer-menu li, .footer-menu-last li{
+        padding: 0 15px;
+    }
+    .footer-menu-last {
+        color: rgba(255, 255, 255, 0.60);
+
+
+    }
+    
+
+    .social-icon img{
+        width: 30px;
+        margin-left: 30px;
+        padding: 50px 0;
+    }
+
+
+    .footer-section .normal-paragraph{
+        padding-top: 20px;
+    }
+
+    /* footer section css ends here  */
