--- a/style.css
+++ b/style.css
@@ -31,6 +31,18 @@ h3{
     border-radius: 50px;
     border: none;
     text-transform: uppercase;
+    box-shadow: 1px 3px 5px #ccc;
+    transition: .1s ease-in-out;
+}
+
+.btn-primary:hover{
+    padding: 15px 40px;
+    font-size: 16px;
+    color: #ffffff;
+    border-radius: 50px;
+    border: none;
+    text-transform: uppercase;
+    box-shadow: 1px 5px 5px #ccc;
 }
 
 
