--- a/responsive.css
+++ b/responsive.css
@@ -150,18 +150,30 @@ flex-direction: column;
 
 
    /* bottom grid section css starts here  */
-   .bottom-grid{
-flex-direction: column;
 
+
+.bottom-grid-container{
+    max-width: auto;
+    padding: 5px;
 }
 
-.bottom-grid a span{
-    font-size: 16px;
-
+.bottom-grid li{
+    width: 95px;
+    height: 30px;
+    font-size: 12px;
+}
+.bottom-grid li img {
+    margin-right: 3px;
+    width: 20px;
 }
    /* bottom grid section css ends here  */
 
 
    .footer-menu, .footer-menu-last {
     flex-direction: column;
+}
+.footer-menu li, .footer-menu-last li{
+    padding:6px;
+    font-size: 14px;
+}
 }
